<resources>
    <string name="app_name">NotePad</string>
    <string name="addButton">Add</string>
    <string name="title">Title : </string>
    <string name="note">Note : </string>
    <string name="add">Add Note</string>
    <string name="edit">Edit</string>
    <string name="apply">Apply</string>
    <string name="noselected">You Didn\'t Select a Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
