<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hasalp.notepad.ContentFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/notselected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/noselected"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:visibility="visible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/note_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:focusable="false"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:padding="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
