<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hasalp.notepad.EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content"
        android:visibility="visible"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="true"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/note_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine"
                android:focusable="true"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/applyEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
