<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hasalp.notepad.AddActivity">


    <LinearLayout
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/title"
            android:textAlignment="center"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/titleEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/note"
            android:textAlignment="textStart"
            android:paddingLeft="30dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <EditText
            android:id="@+id/messageEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAlignment="viewStart"
            android:ems="10"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</LinearLayout>
